# openmetrics

./: .gitignore  BUILD.bazel  CODEOWNERS  LICENSE  README.md  WORKSPACE  sendoff.txt
api/main/: BUILD.bazel  awscert.go  batchlogwriter.go  event.json  jsonutil.go  jsonutil_test.go  kafkabatchlogwriter.go  kafkabatchlogwriter_test.go  logrequestutil.go  logrequestutil_test.go  main.go  main_test.go  parseutil.go  parseutil_test.go  recordids.go  recordids_test.go  recordpreparer.go  recordpreparer_test.go  test_util.go
api/main/pool/: BUILD.bazel  mockpool.go  pool.go  pool_test.go
pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/avro/: BUILD.bazel  FixedProtobufData.java  FixedProtobufDatumWriter.java  PromotedProtobufData.java  PromotedProtobufDatumWriter.java
pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/aws/: AwsSecretsManagerClient.java  BUILD.bazel
pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/counter/: BUILD.bazel  Constants.java  ContentEventDevice.java  ContentQueryEvent.java  CounterKeys.java  Device.java  FeatureId.java  GlobalEventDevice.java  JoinedEventRedisHashSupplier.java  LastLogUserContent.java  LastLogUserQuery.java  LastTimeAggResult.java  LastUserContent.java  LastUserEventRedisHashSupplier.java  LastUserQuery.java  LogUserEvent.java  PlatformContentDeviceEvent.java  PlatformContentQueryEvent.java  PlatformDeviceEvent.java  PlatformLogUserContentEvent.java  PlatformLogUserEvent.java  PlatformLogUserQueryEvent.java  PlatformQueryEvent.java  PlatformUserContentEvent.java  PlatformUserEvent.java  PlatformUserQueryEvent.java  QueryEvent.java  RedisHashKeySupplier.java  UserEvent.java  UserEventRedisHashSupplier.java  WindowAggResult.java
pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/error/: BUILD.bazel  Error.avsc  MismatchErrorTag.java
pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/fakedatagenerator/: BUILD.bazel  IncrementingUUIDSupplier.java  LogRequestFactory.java  LogRequestIterator.java  LogRequestIteratorOptions.java  State.java  StringPrefixUUIDSupplier.java
pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/functions/: AddLatestImpressions.java  BUILD.bazel  CombineDeliveryLog.java  Counter.java  CounterUtil.java  DateHourBucketAssigner.java  Delay.java  DeliveryExecutionUtil.java  FilterOperator.java  FixDeliveryLog.java  KeepFirstRow.java  KeyUtil.java  LastTimeAndCount.java  LocalProcAndEventBoundedOutOfOrdernessWatermarkGenerator.java  LocalProcAndEventBoundedOutOfOrdernessWatermarkStrategy.java  LogSlowOnTimer.java  PopulatePagingId.java  PushDownBatchFields.java  RestructureDeliveryLog.java  RightSeenOutput.java  SerializableBiFunction.java  SerializableFunction.java  SerializableParseFrom.java  SerializablePredicate.java  SerializablePredicates.java  SerializableToLongFunction.java  SerializableTriFunction.java  SetLogTimestamp.java  SlidingCounter.java  SlidingDailyCounter.java  SlidingHourlyCounter.java  SlidingSixDayCounter.java  SortWithWatermark.java  TemporalJoinFunction.java  UserInfoUtil.java
pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/job/: AttributedActionSegment.java  BUILD.bazel  BaseFlinkJob.java  BaseFlinkTableJob.java  CompositeFlinkSegment.java  ContentApiSegment.java  DirectFlatOutputKafkaSource.java  DirectValidatedEventKafkaSource.java  FeatureFlag.java  FlatOutputKafka.java  FlatOutputKafkaSegment.java  FlatOutputKafkaSink.java  FlatOutputKafkaSource.java  FlatOutputKafkaSourceProvider.java  FlinkSegment.java  JoinedImpressionSegment.java  KafkaSegment.java  KafkaSinkSegment.java  KafkaSourceSegment.java  KeepFirstSegment.java  MergeDetailsOutputs.java  MetricsApiKafkaSource.java  RawActionSegment.java  RawImpressionSegment.java  RawOutputKafka.java  RawViewSegment.java  RegionSegment.java  ResourceLoader.java  S3FileOutput.java  S3Segment.java  StreamSinkWithLateOutput.java  ValidatedDataSourceProvider.java  ValidatedEventKafkaSegment.java  ValidatedEventKafkaSink.java  ValidatedEventKafkaSource.java  ValidatedEventSink.java
pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/queryablestate/: AddressRetriever.java  BUILD.bazel  ClientUtils.java  CoordinatorServer.java  HostUtils.java  KeyedProcessFunctionWithQueryableState.java  MetricsValuesSerializer.java  MetricsValuesTypeInformation.java  OperatorInfo.java  OperatorRegistrationEvent.java  OperatorRegistry.java  OperatorStateQueryClient.java  QueryServiceOperator.java  QueryServiceOperatorCoordinator.java  QueryServiceOperatorFactory.java  Reflector.java  RocksdbStateBackendQuerier.java  SelfRegisterOneInputStreamTask.java  SelfRegisterTwoInputStreamTask.java  StreamGraphRewriter.java  StreamGraphRewriterOptions.java  StreamTaskUtil.java  TaskServer.java
pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/records/: BUILD.bazel  OptionalUtils.java  ParseFromProtoDeserializer.java  PlatformKeySerializationSchema.java  PlatformLogUserKeySerializationSchema.java  ProtoDeserializationSchema.java  ProtoDeserializer.java  ProtoKafkaSerializationSchema.java  ProtoKafkaValueSerializationSchema.java
pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/s3/: BUILD.bazel  S3Path.java
pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/table/: ActionTable.java  AttributedActionTable.java  BUILD.bazel  FlinkTableUtils.java  ImpressionTable.java  JoinedEventTableSourceSegment.java  JoinedImpressionTable.java  MetricsTableCatalog.java  RawEventTableSourceSegment.java  Tables.java  ViewTable.java
pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/testing/: AvroAsserts.java  AvroPojoAsserts.java  AvroProtoUtils.java  BUILD.bazel  FileAsserts.java  FlatMapUtil.java  Iterables.java  JsonAsserts.java  (+4 more)
pipeline/src/main/java/ai/promoted/metrics/logprocessor/fakedatagenerator/: BUILD.bazel  ContentGenerator.java  LogGenerator.java  TrackExceptionsCallback.java
pipeline/src/main/java/org/apache/flink/formats/avro/: BUILD.bazel  PromotedAvroFileFormatFactory.java  org.apache.flink.table.factories.Factory
(+772 files in other folders)
