load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_library(
    name = "pool",
    srcs = glob([
        "mockpool.go",
        "pool.go",
    ]),
    importpath = "github.com/promotedai/metrics/api/main/pool",
    visibility = ["//visibility:public"],
)

go_test(
    name = "pool_test",
    srcs = glob(["pool_test.go"]),
    embed = [":pool"],
    deps = [
        "@com_github_stretchr_testify//assert",
    ],
)
