load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "counter",
    srcs = glob(["*.java"]),
    visibility = ["//pipeline/src/main/java/ai/promoted/metrics/logprocessor:java_and_test"],
    deps = [
        "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/functions/sink",
        "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/util",
        "@com_github_promotedai_schema_internal_git//proto/delivery:delivery_java_proto",
        "@com_github_promotedai_schema_internal_git//proto/event:event_java_proto",
        "@maven//:com_github_ua_parser_uap_java",
        "@maven//:com_google_guava_guava",
        "@maven_neverlink//:org_apache_flink_flink_core",
    ],
)
