package(default_visibility = ["//src/test:__subpackages__"])

load("@rules_java//java:defs.bzl", "java_library", "java_plugin")

java_plugin(
    name = "autovalue_plugin",
    processor_class = "com.google.auto.value.processor.AutoValueProcessor",
    deps = [
        "@maven//:com_google_auto_value_auto_value",
    ],
)

java_library(
    name = "autovalue",
    exported_plugins = [":autovalue_plugin"],
    exports = [
        "@maven//:com_google_auto_value_auto_value",
        "@maven//:com_google_auto_value_auto_value_annotations",
    ],
)

java_library(
    name = "fakedatagenerator",
    srcs = glob(["*.java"]),
    visibility = ["//pipeline/src/main/java/ai/promoted/metrics/logprocessor:java_and_test"],
    deps = [
        ":autovalue",
        "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/fakedatagenerator/content",
        "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/functions",
        "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/functions/pushdown",
        "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/util",
        "@com_github_promotedai_schema_internal_git//proto/common:common_java_proto",
        "@com_github_promotedai_schema_internal_git//proto/delivery:delivery_java_proto",
        "@com_github_promotedai_schema_internal_git//proto/delivery/private/features:features_java_proto",
        "@com_github_promotedai_schema_internal_git//proto/event:event_java_proto",
        "@com_github_promotedai_schema_internal_git//proto/promotion:promotion_java_proto",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:org_apache_commons_commons_lang3",
    ],
)
