load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "functions",
    srcs = glob(["*.java"]),
    visibility = ["//pipeline/src/main/java/ai/promoted/metrics/logprocessor:java_and_test"],
    deps = [
        "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/constant",
        "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/util",
        "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/counter",
        "@com_github_promotedai_schema_internal_git//proto/common:common_java_proto",
        "@com_github_promotedai_schema_internal_git//proto/delivery:delivery_java_proto",
        "@com_github_promotedai_schema_internal_git//proto/event:event_java_proto",
        "@com_github_promotedai_schema_internal_git//proto/promotion:promotion_java_proto",
        "@com_google_protobuf//:protobuf_java",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
        "@maven_neverlink//:org_apache_flink_flink_core",
        "@maven_neverlink//:org_apache_flink_flink_java",
        "@maven//:org_apache_flink_flink_avro",
        "@maven_neverlink//:org_apache_flink_flink_file_sink_common",
        "@maven_neverlink//:org_apache_flink_flink_runtime",
        "@maven_neverlink//:org_apache_flink_flink_streaming_java",
        "@maven_neverlink//:org_apache_flink_flink_statebackend_rocksdb",
        # Manually replace the frocksdbjni version to support mac m1 chip https://github.com/apache/flink/pull/21747
        "@maven_neverlink//:com_ververica_frocksdbjni_6_20_3_ververica_2_0",
        "@maven//:org_apache_logging_log4j_log4j_api",
        "@maven//:org_apache_logging_log4j_log4j_core",
        "@maven//:org_apache_avro_avro",
    ],
)
