load("@rules_java//java:defs.bzl", "java_library", "java_plugin")

java_plugin(
    name = "autovalue_plugin",
    processor_class = "com.google.auto.value.processor.AutoValueProcessor",
    deps = [
        "@maven//:com_google_auto_value_auto_value",
    ],
)

java_library(
    name = "autovalue",
    exported_plugins = [":autovalue_plugin"],
    exports = [
        "@maven//:com_google_auto_value_auto_value",
        "@maven//:com_google_auto_value_auto_value_annotations",
        "@maven//:javax_annotation_javax_annotation_api",
    ],
)

java_library(
    name = "job",
    srcs = glob(["*.java"]),
    visibility = ["//pipeline/src/main/java/ai/promoted/metrics/logprocessor:java_and_test"],
    deps = [
        ":autovalue",
        "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/avro",
        "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/aws",
        "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/constant",
        "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/error",
        "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/error:avro",
        "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/functions",
        "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/functions/base",
        "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/functions/content/common",
        "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/functions/content/datastream",
        "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/functions/filter",
        "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/functions/sink",
        "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/functions/validate",
        "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/model:avro",
        "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/records",
        "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/records/flink",
        "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/s3",
        "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/util",
        "@com_github_promotedai_schema_internal_git//proto/event:event_java_proto",
        "@com_google_protobuf//:protobuf_java",
        "@maven//:ai_promoted_parquet_protobuf",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_github_ua_parser_uap_java",
        "@maven//:com_google_auto_value_auto_value",
        "@maven//:com_google_auto_value_auto_value_annotations",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_protobuf_protobuf_java_util",
        "@maven//:com_twitter_chill_protobuf",
        "@maven//:info_picocli_picocli",
        "@maven//:org_apache_avro_avro",
        "@maven//:org_apache_avro_avro_protobuf",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_apache_flink_flink_avro",
        "@maven//:org_apache_flink_flink_connector_base",
        "@maven//:org_apache_flink_flink_connector_kafka",
        "@maven//:org_apache_flink_flink_parquet",
        "@maven//:org_apache_hadoop_hadoop_client",
        "@maven//:org_apache_hadoop_hadoop_common",
        "@maven//:org_apache_kafka_kafka_clients",
        "@maven//:org_apache_parquet_parquet_avro",
        "@maven_neverlink//:org_apache_flink_flink_clients",
        "@maven_neverlink//:org_apache_flink_flink_connector_files",
        "@maven_neverlink//:org_apache_flink_flink_core",
        "@maven_neverlink//:org_apache_flink_flink_file_sink_common",
        "@maven_neverlink//:org_apache_flink_flink_java",
        "@maven_neverlink//:org_apache_flink_flink_runtime",
        "@maven_neverlink//:org_apache_flink_flink_streaming_java",
        "@maven_neverlink//:org_apache_flink_flink_table_api_java_uber",
        "@maven_neverlink//:org_apache_logging_log4j_log4j_api",
        "@maven_neverlink//:org_apache_parquet_parquet_common",
        "@maven_neverlink//:org_apache_parquet_parquet_hadoop",
    ],
)
