load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "records",
    srcs = glob(["*.java"]),
    visibility = ["//pipeline/src/main/java/ai/promoted/metrics/logprocessor:java_and_test"],
    deps = [
        # Avoid Flink dependencies in this package.
        # If you need Flink deps, put it in the flink subpackage.
        "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/functions/base",
        "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/util",
        "@com_github_promotedai_schema_internal_git//proto/event:event_java_proto",
        "@com_github_promotedai_schema_internal_git//proto/promotion:promotion_java_proto",
        "@com_google_protobuf//:protobuf_java",
        "@maven//:org_apache_avro_avro",
        "@maven//:org_apache_kafka_kafka_clients",
        "@maven//:com_google_guava_guava",
    ],
)
