load("@rules_java//java:defs.bzl", "java_binary", "java_library")

DEPS = [
    "//pipeline/src/main/java/org/apache/flink/connector/file/table:suffixedfilesystem",
    "//pipeline/src/main/java/org/apache/flink/formats/csv:headeredcsv",
    "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/functions",
    "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/job",
    "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/util",
    "//pipeline/src/main/java/ai/promoted/metrics/logprocessor/common/avro",
    "//pipeline/src/main/java/org/apache/flink/formats/protobuf/deserialize:protobuf_to_row",
    "//pipeline/src/main/java/org/apache/flink/formats/protobuf/serialize:row_to_protobuf",
    "//pipeline/src/main/java/org/apache/flink/formats/avro:promoted_avro",
    "@com_github_promotedai_schema_internal_git//proto/event:event_java_proto",
    "@com_google_protobuf//:protobuf_java",
    "@maven//:org_apache_avro_avro",
    "@maven//:com_google_code_findbugs_jsr305",
    "@maven//:com_google_guava_guava",
    "@maven//:com_google_protobuf_protobuf_java_util",
    "@maven//:info_picocli_picocli",
    "@maven_neverlink//:org_apache_flink_flink_core",
    "@maven//:org_apache_flink_flink_avro",
    "@maven_neverlink//:org_apache_flink_flink_csv",
    "@maven//:org_apache_flink_flink_protobuf",
    "@maven//:org_apache_flink_flink_connector_kafka",
    "@maven//:org_apache_flink_flink_connector_kinesis",
    "@maven_neverlink//:org_apache_flink_flink_java",
    "@maven_neverlink//:org_apache_flink_flink_streaming_java",
    "@maven_neverlink//:org_apache_flink_flink_table_api_java_uber",
    "@maven_neverlink//:org_apache_flink_flink_table_runtime",
    "@maven_neverlink//:org_apache_logging_log4j_log4j_api",
    "@maven//:com_fasterxml_jackson_core_jackson_databind",
    "@maven//:com_fasterxml_jackson_dataformat_jackson_dataformat_csv",
]

java_library(
    name = "table",
    srcs = glob(["*.java"]),
    visibility = ["//pipeline/src/main/java/ai/promoted/metrics/logprocessor:java_and_test"],
    deps = DEPS,
)
